Fix most of the initial issues
git-svn-id: http://cerberus.rubyforge.org/svn@2 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/README
+++ b/README
@@ -12,4 +12,4 @@ Describe what is is Cerberus. Link to Wikipedia. Cerberus don't let your project
 
 
 cerberus add            #Adds current project to list of watched applications
-cerberus run myproject  #Run test for some configuration
+cerberus run novagora   #Run test for some configuration
