--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Cerberus developed by Anatol Pomozov (anatol.pomozov@gmail.com) and shared under LGPL.
+Cerberus developed by Anatol Pomozov (anatol.pomozov@gmail.com) and shared under MIT license.
 
 Cerberus is continuous integration software. For more CI theory read this document.
 
@@ -8,5 +8,45 @@ Requirements: ruby 1.8.2 or higher
 Describe what is is Cerberus. Link to Wikipedia. Cerberus don't let your project go into the world of chaos and death.
 
 
-cerberus add            #Adds current project to list of watched applications
-cerberus build prj      #Run project
+cerberus add (DIR|SVN_URL)?    #Adds current project to list of watched applications
+cerberus build PROJECT_NAME    #Run project
+
+
+
+
+
+
+
+set HOME
+
+
+
+
+
+This is Cerberus application that help us keep application in a good shape.
+
+It is Continues Integration software, that runs tests after each source-code change.
+
+Just install *.gem file that i sending you and then
+
+  cerberus add <SVN_URL>
+
+After that in ~/.cerberus/config you will see <PROJECT>.yml config file for your application.
+Edit "recipients" line in that file and add any emails where you want to send mails
+
+Also you need to configure mail server. You need to edit ~/.cerberus/config.yml for that. This is my config content
+
+mail:
+  address: 10.159.228.243
+  user_name: anatol
+  password: anatol
+  domain: my.mail
+  authentication: login
+
+you need add similar config file with your options.
+
+You could check your application by running
+  cerberus build <PROJECT>
+but better to add cerberus invocation to Cron. Run it each 15 minutes will be ok.
+
+Well, thats all. If you have any questions, proposals - just let me know.
