--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,5 @@
-xx.xx.2006 - ver. 0.1
-  Initial version of Cerberus CI tool
+*SVN*
+
+
+*0.1.0* (July 8th, 2006)
+- Initial version of Cerberus CI tool
