Improved Configuration mechanism Improved tests Used meta_project for release process
git-svn-id: http://cerberus.rubyforge.org/svn@27 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Cerberus developed by Anatol Pomozov (anatol.pomozov@gmail.com) and shared under MIT license.
 
 Cerberus is continuous integration (CI) software. Cerberus could be periodically run from scheduler 
-and check if aolication tests are broken. If it happend then Cerberus sends notification to developers.
+and check if application tests are broken. If it happend then Cerberus sends notification to developers.
 
 For more CI theory read this document from Martin Fowler 
 http://www.martinfowler.com/articles/continuousIntegration.html.
