Improved file publisher mechanism with xforge
git-svn-id: http://cerberus.rubyforge.org/svn@28 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
-== Version *SVN*
-
+= Cerberus Changelog
 
 == Version 0.1.0
-* First public release of Cerberus CI tool. See README file for more info.
+
+Initial version of Cerberus tool
+
+* Implemented functionality required by Continuous Integration tool.
