Added test for incorrect running of project
git-svn-id: http://cerberus.rubyforge.org/svn@30 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -4,4 +4,4 @@
 
 Initial version of Cerberus tool
 
-* Implemented functionality required by Continuous Integration tool.
+* Implemented basic functionality required by Continuous Integration.
