--- a/TODO
+++ b/TODO
@@ -1,5 +1,3 @@
-+ Add support of ENV variables entered from command line
 + Save logs of application to work directory
-+ Load options hierarchically CONFIG > APPLICATION_CONFIG > COMMAND_LINE_OPTIONS
 + Add file lock (extract from first revisions of Cerberus)
-+ Generate HTML file from Readme + FAQ and out to http://cerberus.rubyforge.org
++ Generate HTML file from Readme + FAQ and deploy to http://cerberus.rubyforge.org
