--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
 + Save logs of application to work directory
 + Add file lock (extract from first revisions of Cerberus)
 + Generate HTML file from Readme + FAQ and deploy to http://cerberus.rubyforge.org
++ Add posibility to run all projects by 'buildall' command
++ Add interpreces locks (semaphors using file system??)
++ Add possibility to save history logs to separate folder
++ Make possibility to run each test (not only latest for that moment)
++ Add possibility to send messages over Jabber (using xmmp4r)
