--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,9 @@
 = Cerberus Changelog
 
-== Version 0.1.0
+== Version 0.1.1
+* Added 'buildall' command that build all projects added to Cerberus repository.
 
+== Version 0.1.0
 Initial version of Cerberus tool
 
 * Implemented basic functionality required by Continuous Integration.
