Added rcov coverage tool
git-svn-id: http://cerberus.rubyforge.org/svn@43 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/TODO
+++ b/TODO
@@ -6,3 +6,5 @@
 + Add possibility to save history logs to separate folder
 + Make possibility to run each test (not only latest for that moment)
 + Add possibility to send messages over Jabber (using xmmp4r)
+
++ Use webgen for generating site
