Added automatic subversion cleanup to avoid repository locking after Cedrberus process termination
git-svn-id: http://cerberus.rubyforge.org/svn@44 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 = Cerberus Changelog
 
+== Version 0.2.0
+
+* Added automatic subversion cleanup to avoid repository locking after Cedrberus process termination
+
 == Version 0.1.1
 Minor improvements
 
