Huge configuration refactoring
git-svn-id: http://cerberus.rubyforge.org/svn@48 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Cerberus is a Continuous Integration (CI) software. Cerberus could be periodically run from scheduler and check if application tests are broken. If it happens then Cerberus will send notification to developers. Cerberus perfectly works both on Windows and *nix platforms.
+Cerberus is a Continuous Builder software. Cerberus could be periodically run from scheduler and check if application tests are broken. If it happens then Cerberus will send notification to developers. Cerberus perfectly works both on Windows and *nix platforms.
 
 For more CI theory read this document from Martin Fowler 
 http://www.martinfowler.com/articles/continuousIntegration.html.
