--- a/CHANGES
+++ b/CHANGES
@@ -2,8 +2,8 @@
 
 == Version 0.2.0
 
+* Configuration structure has been greatly changed since 0.1.1 version
 * Added automatic subversion cleanup to avoid repository locking after Cedrberus process termination
-* Configuration structure has been changed since 0.1.1 version
 * Added Jabber notifier
 
 == Version 0.1.1
