Fixed minor problems Notifier renamed to Publisher
git-svn-id: http://cerberus.rubyforge.org/svn@49 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@
 
 * Configuration structure has been greatly changed since 0.1.1 version
 * Added automatic subversion cleanup to avoid repository locking after Cedrberus process termination
-* Added Jabber notifier
+* Added Jabber publisher
 
 == Version 0.1.1
 Minor improvements
