Minor fixes with verbosity of Cerberus
git-svn-id: http://cerberus.rubyforge.org/svn@60 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,14 @@
 = Cerberus Changelog
 
+== Version 0.2.2
+Minor fix release
+
+* Make rake executable recongnition process less verbose
+
 == Version 0.2.1
 Minor fix release
 
 * publisher -> active flag now not mandatory. Use 'mail' publisher as active if not set any
-
 
 == Version 0.2.0
 Config file was changed since 0.1.1 and you need regenerate config files.
