Preparing to the next (0.2.2) version of Cerberus.
git-svn-id: http://cerberus.rubyforge.org/svn@64 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@
 Minor fix release
 
 * Make rake executable recongnition process less verbose
+* Refactored builder mecahnism in Cerberus. Now adding new Builder possible in much more easiest way
+* Added Maven2 builder
 
 == Version 0.2.1
 Minor fix release
