--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Minor fix release
 * Refactored builder mecahnism in Cerberus. Now adding new Builder possible in much more easiest way
 * Added Maven2 builder
 * Add possibility to specify Builder type on application creation by BUILDER=xxx option
+* Process correctly folders locked by SVN
 
 == Version 0.2.1
 Minor fix release
