Added possibility to save logs
git-svn-id: http://cerberus.rubyforge.org/svn@75 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,11 @@
 = Cerberus Changelog
 
+== Version 0.2.3
+Features release
+
+* Added site for Cerberus project. http://cerberus.rubyforge.org/
+* From now all builds logs their build data. It would be switched off by :log/:enable => false in configuration file
+
 == Version 0.2.2
 Minor fix release
 
