--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 + Make possibility to run tests for all revisions (not only latest for that moment)
 + Send svn log not only for latest revision but from latest successfull. For that we need to store version of latest successful rev.
 + IRC: make message colorized. Make messages shorter to avoid irc flood (and ban to user)
++ Add heartbit message
