* Fix problem with TLS hack. Now possible to send to SSL and vanilla mailservers without modifying code. * Added rant support (http://make.rubyforge.org) [Xavier Shay] * Fixed escaping of code in RSS publisher [Xavier Shay] * If we have only builder or publisher in configuration then use it. Param :type made mandatory.
git-svn-id: http://cerberus.rubyforge.org/svn@89 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,13 @@
 = Cerberus Changelog
 
+== Version 0.2.4
+Features release
+
+* Fix problem with TLS hack. Now possible to send to SSL and vanilla mailservers without modifying code.
+* Added rant support (http://make.rubyforge.org) [Xavier Shay]
+* Fixed escaping of code in RSS publisher [Xavier Shay]
+* If we have only builder or publisher in configuration then use it. Param :type made mandatory.
+
 == Version 0.2.3
 Features release
 
