Added possibility to specify svn login and password in configuration file
git-svn-id: http://cerberus.rubyforge.org/svn@92 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 = Cerberus Changelog
 
+== Version 0.2.5
+Fix release
+
+* Added possibility to specify username and password for Subversion commands
+
 == Version 0.2.4
 Features release
 
