--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 + Send svn log not only for latest revision but from latest successfull. For that we need to store version of latest successful rev.
 + IRC: make message colorized. Make messages shorter to avoid irc flood (and ban to user)
 + Add heartbit message
++ Add configuration migrations, for easier migration process
