Added Darcs support
git-svn-id: http://cerberus.rubyforge.org/svn@93 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,8 @@
 == Version 0.2.5
 Fix release
 
-* Added possibility to specify username and password for Subversion commands
+* Added possibility to specify user_name and password for Subversion commands
+* Added support of Darcs VCS
 
 == Version 0.2.4
 Features release
