--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
-+ Add flag verbose (from command line)
 + Make possibility to run tests for all revisions (not only latest for that moment)
 + Send svn log not only for latest revision but from latest successfull. For that we need to store version of latest successful rev.
 + IRC: make message colorized. Make messages shorter to avoid irc flood (and ban to user)
 + Add heartbit message
 + Add configuration migrations, for easier migration process
++ Add text 'getting better/worse' to messages
++ Add Campfire support like in continuous builder plugin
