Added changeset_url support
git-svn-id: http://cerberus.rubyforge.org/svn@106 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 == Version 0.2.5
 Fix release
 
+* Added changeset_url option that adds quick link to browsable chanelist view
 * Added possibility to specify user_name and password for Subversion commands
 * Added support of Darcs VCS
 
