Added Home output to Help Moved version to 0.3.1
git-svn-id: http://cerberus.rubyforge.org/svn@112 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 == SVN
 
 * Use lazy loading of cerberus components (publishers, vcs, builder)
+* Show Cerberus home in Help
 
 == Version 0.3.0
 Fix release
