Added BJam build tool support
git-svn-id: http://cerberus.rubyforge.org/svn@117 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
 * Use lazy loading of cerberus components (publishers, vcs, builder)
 * Show Cerberus home in Help
 * Added 'list' command that shows names of all *active* projects
+* Added BJam building tool http://www.boost.org/tools/build/v2/index.html
 
 == Version 0.3.0
 Fix release
