Added support of Perforce SCM
git-svn-id: http://cerberus.rubyforge.org/svn@120 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 = Cerberus Changelog
 
-== SVN
+== Version 0,3,2
+Added Perforce SCM support
+
+* Added support of Perforce
+
+== Version 0.3.1
+Added BJam builder support
 
 * Use lazy loading of cerberus components (publishers, vcs, builder)
 * Show Cerberus home in Help
