Lazy loading moved to separate file
git-svn-id: http://cerberus.rubyforge.org/svn@123 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 = Cerberus Changelog
 
-== Version 0,3,2
+== SVN
+
+* Fix Const load problem with Rails 1.2RC1
+
+== Version 0.3.2
 Added Perforce SCM support
 
 * Added support of Perforce
