--- a/TODO
+++ b/TODO
@@ -4,10 +4,12 @@
 + Add heartbit message
 + Add configuration migrations, for easier migration process
 + Add text 'getting better/worse' to messages
++ Create Screencast for Cerberus
++ Improve Configuration Index (docs)
+
+
+- Use RSCM project for dealing with SCM
 
 
 Add support of X10 devices
    http://blade.nagaokaut.ac.jp/cgi-bin/scat.rb/ruby/ruby-talk/124460
-
-
-Add support of RSCM project
