Correctly implement Jabber publisher using XMPP4R library
git-svn-id: http://cerberus.rubyforge.org/svn@125 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 == SVN
 
 * Fix Const load problem with Rails 1.2RC1
+* Correctly implement Jabber publisher using XMPP4R library
 
 == Version 0.3.2
 Added Perforce SCM support
