Huge refactoring that changes build behaviour
git-svn-id: http://cerberus.rubyforge.org/svn@128 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@
 + Add text 'getting better/worse' to messages
 + Create Screencast for Cerberus
 + Improve Configuration Index (docs)
++ Add on_success on_failure and on_finish opions to builders
++ Add ability 
 
 
 - Use RSCM project for dealing with SCM
