Added 'getting better/worse' to build messages' subject
git-svn-id: http://cerberus.rubyforge.org/svn@130 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
 * Fix Const load problem with Rails 1.2RC1
 * Correctly implement Jabber publisher using XMPP4R library
 * Upgrade to Webgen 0.4.1
+* Added 'getting better/worse' to build messages' subject
 
 == Version 0.3.2
 Added Perforce SCM support
