Added possibility to configure on what event we would like to send messages.
git-svn-id: http://cerberus.rubyforge.org/svn@134 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,24 @@
 * Correctly implement Jabber publisher using XMPP4R library
 * Upgrade to Webgen 0.4.1
 * Added 'getting better/worse' to build messages' subject
+* Added possibility to configure events on what you would like to receive messages. 
+  By default used 'default' events. It means all except 'successful' state.
+  You could set to this options list of any valid states such as [broken, failed, revival, successful, setup] or predefined sets as
+  [all, any, default, none].
+
+  You could configure by setting :on_event option to :publisher options branch, or to concrete publisher configuration.
+  In case if this option added both to :publisher and :publisher,<PUBLISHER> then concrete configurations wins.
+
+  Examples of configuration
+
+publisher:
+  on_event: broken, revival
+  mail:
+    on_event: all
+  jabber:
+    #nothing here
+
+  In given example we would send messages about ALL events by mail and only messages about brokeness and revivalness by Jabber.
 
 == Version 0.3.2
 Added Perforce SCM support
