Prepare to 0.3.3 release
git-svn-id: http://cerberus.rubyforge.org/svn@136 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/TODO
+++ b/TODO
@@ -4,8 +4,11 @@
 + Add heartbit message
 + Create Screencast for Cerberus
 + Improve Configuration Index (docs)
-+ Add on_success on_failure and on_finish opions to builders
 + Refactor logger. Use logger also in mail publisher.
++ Add smart algorithm for calculating of person's name who broke release
+
+Before release!
+! Add on_success on_failure and on_finish opions to builders
 
 
 - Add configuration migrations, for easier migration process
