Fix bug with Cerberus::Util
git-svn-id: http://cerberus.rubyforge.org/svn@139 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 = Cerberus Changelog
 
+== Version 0.3.4
+Major changes
+
+Fixed bug with Cerberus::Util spotted by Mohamemd Alvi
+
 == Version 0.3.3
 Major changes
 
