Implemented hooks for Cerberus
git-svn-id: http://cerberus.rubyforge.org/svn@141 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,12 @@
 Major changes
 
 Fixed bug with Cerberus::Util spotted by Mohamemd Alvi
+Added possibility to add hooks on Cerberus executions. Configuration file format for it is
+
+hook:
+  HOOK_NAME:
+    on_event: successful, setup #by default - run hook for any state
+    action: 'export CERBERUS_HOME=/home/anatol && sudo chown www-data -R /home/anatol/cerberus && rcov' #Add here any hook you want
 
 == Version 0.3.3
 Major changes
