Update to ActionMailer 1.3.2
git-svn-id: http://cerberus.rubyforge.org/svn@143 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,16 @@
 = Cerberus Changelog
 
 == Version 0.3.4
-Major changes
+Minor release
 
-Fixed bug with Cerberus::Util spotted by Mohamemd Alvi
-Added possibility to add hooks on Cerberus executions. Configuration file format for it is
+* Use smpt_settings config option instead of server_settings for ActionMailer
+
+== Version 0.3.4
+Added Cerberus hooks that allow running custom tasks on build finish
+
+* Fixed bug with Cerberus::Util spotted by Mohamemd Alvi
+
+* Added possibility to add hooks on Cerberus executions. Configuration file format for it is
 
 hook:
   HOOK_NAME:
