Added out of box RSpec support
git-svn-id: http://cerberus.rubyforge.org/svn@163 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,16 @@
 = Cerberus Changelog
 
+== Version 0.3.6
+RSpec
+
+* Added out of box support of RSpec tests. 
+  Usage: add to your project configuration following config
+
+  builder:
+    rspec:
+      task: test
+  
+
 == Version 0.3.5
 Bug fixing
 
